Fix text area covered by on screen keyboard

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -206,3 +206,14 @@ body {
 .markdown-content li > p {
   margin: 0;
 }
+
+
+@supports (padding: max(0px)) {
+  .input-container {
+    padding-bottom: max(16px, env(safe-area-inset-bottom));
+  }
+}
+
+html {
+  scroll-behavior: smooth;
+}
